レスポンシブ対応１

--- a/index.html
+++ b/index.html
@@ -4,24 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <script src="https://kit.fontawesome.com/d42bc04216.js"></script>
   <title>harayuri portfolio</title>
   <link rel="stylesheet" type="text/css" href="assets/sass/main.css">
-  <!-- <script type="text/javascript" src="assets/javascripts/javascript.js"></script> -->
-  <!-- <script type="text/javascript">
-    WebFontConfig = {
-      google: { families: [ 'Unica+One::latin' ] }
-    };
-    (function() {
-      var wf = document.createElement('script');
-      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-        '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-      wf.type = 'text/javascript';
-      wf.async = 'true';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(wf, s);
-    })();
-  </script> -->
 </head>
 
 <body>
@@ -101,7 +87,14 @@
       
       <div class="gallerybox">
         <div class="image-text">
-          旅先での景色たち。
+          <br>旅先での景色たち。<br><br>
+          新しい景色や価値観、人々と関わりたくさんの刺激をもらいました。<br>
+          お金がなくても、毎日力強く楽しく生きる人。<br>
+          家族や友達、自分に関わる人を心から大切にする人。<br>
+          キラキラした顔で夢を語る人。<br><br>
+          そんな人たちがもっと報われる世の中になればいいと思います。<br>
+
+          
         </div>
         <div class="container">
           <div class="slider-container">
