--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
       </div>
     </div>
   </div>
-<!-- <div class="footer">
+  <div class="footer">
     <div class="nico"><img class="niko-chan" src="assets/images/nikochan.png" alt="にこちゃん" width="50px" height="40px"></div>
     <p class="footer-name">yuriemon</p>
-</div>  -->
+  </div> 
 
 </body>
 </html>
